@@ -15,24 +15,25 @@ import org.apache.logging.log4j.Logger;
 
 /// <summary> Provides logging functionality. </summary>
 /**
- * Provides centralized logging functionality for the application.
- * Wraps Log4j2 and maintains an internal list of log entries for UI display.
+ * Provides centralized logging functionality for the application. Wraps Log4j2 and maintains an
+ * internal list of log entries for UI display.
  */
-public class FRLogger {
+@SuppressWarnings("AbbreviationAsWordInName")
+public final class FRLogger {
 
-  public static final DecimalFormat defaultFloatFormat = new DecimalFormat("0.00",
-      new java.text.DecimalFormatSymbols(java.util.Locale.US));
-  public static final DecimalFormat defaultSignedFloatFormat = new DecimalFormat("+0.00;-0.00",
-      new java.text.DecimalFormatSymbols(java.util.Locale.US));
+  public static final DecimalFormat defaultFloatFormat =
+      new DecimalFormat("0.00", new java.text.DecimalFormatSymbols(java.util.Locale.US));
+  public static final DecimalFormat defaultSignedFloatFormat =
+      new DecimalFormat("+0.00;-0.00", new java.text.DecimalFormatSymbols(java.util.Locale.US));
   private static final HashMap<Integer, Instant> perfData = new HashMap<>();
   private static final LogEntries logEntries = new LogEntries();
-  private static final CopyOnWriteArrayList<TraceEventListener> traceEventListeners = new CopyOnWriteArrayList<>();
-  public static boolean granularTraceEnabled = false;
+  private static final CopyOnWriteArrayList<TraceEventListener> traceEventListeners =
+      new CopyOnWriteArrayList<>();
+  public static boolean granularTraceEnabled;
   private static Logger logger;
   private static boolean enabled = true;
 
-  private FRLogger() {
-  }
+  private FRLogger() {}
 
   /**
    * Enables or disables logging globally.
@@ -44,8 +45,7 @@ public class FRLogger {
   }
 
   /**
-   * Formats a duration in seconds into a human-readable string (hours, minutes,
-   * seconds).
+   * Formats a duration in seconds into a human-readable string (hours, minutes, seconds).
    *
    * @param totalSeconds The total duration in seconds.
    * @return A formatted string representing the duration.
@@ -61,7 +61,8 @@ public class FRLogger {
 
     String hoursText = hours > 0 ? (int) hours + (hours == 1 ? " hour " : " hours ") : "";
 
-    String minutesText = minutes > 0 ? (int) minutes + (minutes == 1 ? " minute " : " minutes ") : "";
+    String minutesText =
+        minutes > 0 ? (int) minutes + (minutes == 1 ? " minute " : " minutes ") : "";
 
     return hoursText + minutesText + defaultFloatFormat.format(seconds) + " seconds";
   }
@@ -69,7 +70,7 @@ public class FRLogger {
   /**
    * Formats a score with details about incomplete items and violations.
    *
-   * @param score      The routing score.
+   * @param score The routing score.
    * @param incomplete The number of unrouted items.
    * @param violations The number of design rule violations.
    * @return A formatted string representing the score and any issues.
@@ -87,7 +88,17 @@ public class FRLogger {
     return sb.toString();
   }
 
-  public static String buildTracePayload(String event, String phase, String action, String kvPairs) {
+  /**
+   * Builds a structured key-value trace payload string.
+   *
+   * @param event the trace event name
+   * @param phase optional routing phase
+   * @param action optional action name
+   * @param kvPairs optional additional key-value pairs
+   * @return the formatted payload string
+   */
+  public static String buildTracePayload(
+      String event, String phase, String action, String kvPairs) {
     StringBuilder sb = new StringBuilder();
     sb.append("event=").append(event);
     if (phase != null && !phase.isEmpty()) {
@@ -102,6 +113,13 @@ public class FRLogger {
     return sb.toString();
   }
 
+  /**
+   * Formats labels for one or more net numbers.
+   *
+   * @param board the board containing net definitions
+   * @param netNoArr array of net numbers
+   * @return a comma-separated net label string
+   */
   public static String formatNetLabel(BasicBoard board, int[] netNoArr) {
     if (netNoArr == null || netNoArr.length == 0) {
       return "No net";
@@ -116,11 +134,18 @@ public class FRLogger {
     return sb.toString();
   }
 
+  /**
+   * Formats a label for a single net number.
+   *
+   * @param board the board containing net definitions
+   * @param netNo the net number
+   * @return the net label string
+   */
   public static String formatNetLabel(BasicBoard board, int netNo) {
     if (board == null || board.rules == null || board.rules.nets == null) {
       return "Net #" + netNo + " (Unknown)";
     }
-    if (netNo <= board.rules.nets.max_net_no()) {
+    if (netNo <= board.rules.nets.maxNetNo()) {
       return board.rules.nets.get(netNo).toString();
     }
     return "Net #" + netNo + " (Unknown)";
@@ -129,8 +154,7 @@ public class FRLogger {
   /**
    * Records the start time for a performance trace.
    *
-   * @param perfId A unique identifier for the operation being traced (often the
-   *               method name).
+   * @param perfId A unique identifier for the operation being traced (often the method name).
    */
   public static void traceEntry(String perfId) {
     if (!enabled) {
@@ -161,8 +185,7 @@ public class FRLogger {
   }
 
   /**
-   * Records the end of a performance trace with an optional result object and
-   * logs the duration.
+   * Records the end of a performance trace with an optional result object and logs the duration.
    *
    * @param perfId A unique identifier for the operation being traced.
    * @param result An optional result object to include in the log message.
@@ -178,9 +201,7 @@ public class FRLogger {
 
     long timeElapsed = 0;
     try {
-      timeElapsed = Duration
-          .between(perfData.get(perfId.hashCode()), Instant.now())
-          .toMillis();
+      timeElapsed = Duration.between(perfData.get(perfId.hashCode()), Instant.now()).toMillis();
     } catch (Exception _) {
       // we can ignore this exception
     }
@@ -190,8 +211,12 @@ public class FRLogger {
       timeElapsed = 0;
     }
 
-    String logMessage = "Method '" + perfId.replace("{}", result != null ? result.toString() : "(null)")
-        + "' was performed in " + FRLogger.formatDuration(timeElapsed / 1000.0) + ".";
+    String logMessage =
+        "Method '"
+            + perfId.replace("{}", result != null ? result.toString() : "(null)")
+            + "' was performed in "
+            + FRLogger.formatDuration(timeElapsed / 1000.0)
+            + ".";
 
     FRLogger.trace(logMessage);
 
@@ -201,13 +226,11 @@ public class FRLogger {
   /**
    * Logs an INFO message.
    *
-   * @param msg   The message to log.
+   * @param msg The message to log.
    * @param topic An optional topic UUID associated with the message.
    * @return The created LogEntry.
    */
   public static LogEntry info(String msg, UUID topic) {
-    LogEntry logEntry = logEntries.add(LogEntryType.Info, msg, topic);
-
     if (!enabled) {
       return null;
     }
@@ -217,7 +240,7 @@ public class FRLogger {
 
     logger.info(msg);
 
-    return logEntry;
+    return logEntries.add(LogEntryType.Info, msg, topic);
   }
 
   /**
@@ -233,13 +256,11 @@ public class FRLogger {
   /**
    * Logs a WARNING message.
    *
-   * @param msg   The message to log.
+   * @param msg The message to log.
    * @param topic An optional topic UUID associated with the message.
    * @return The created LogEntry.
    */
   public static LogEntry warn(String msg, UUID topic) {
-    LogEntry logEntry = logEntries.add(LogEntryType.Warning, msg, topic);
-
     if (!enabled) {
       return null;
     }
@@ -249,7 +270,7 @@ public class FRLogger {
 
     logger.warn(msg);
 
-    return logEntry;
+    return logEntries.add(LogEntryType.Warning, msg, topic);
   }
 
   /**
@@ -265,7 +286,7 @@ public class FRLogger {
   /**
    * Logs a DEBUG message.
    *
-   * @param msg   The message to log.
+   * @param msg The message to log.
    * @param topic An optional topic UUID associated with the message.
    * @return The created LogEntry.
    */
@@ -295,14 +316,12 @@ public class FRLogger {
   /**
    * Logs an ERROR message with an exception.
    *
-   * @param msg       The message to log.
-   * @param topic     An optional topic UUID associated with the message.
+   * @param msg The message to log.
+   * @param topic An optional topic UUID associated with the message.
    * @param exception The exception to log.
    * @return The created LogEntry.
    */
   public static LogEntry error(String msg, UUID topic, Throwable exception) {
-    LogEntry logEntry = logEntries.add(LogEntryType.Error, msg, topic, exception);
-
     if (!enabled) {
       return null;
     }
@@ -316,13 +335,13 @@ public class FRLogger {
       logger.error(msg, exception);
     }
 
-    return logEntry;
+    return logEntries.add(LogEntryType.Error, msg, topic, exception);
   }
 
   /**
    * Logs an ERROR message with an exception, but without a topic.
    *
-   * @param msg       The message to log.
+   * @param msg The message to log.
    * @param exception The exception to log.
    * @return The created LogEntry.
    */
@@ -364,45 +383,59 @@ public class FRLogger {
     return null;
   }
 
-  public static boolean trace(String method, String operation, String message, String impactedItems) {
+  /**
+   * Logs a granular TRACE message without impacted points and triggers a debug check.
+   *
+   * @param method the method name where the log originates
+   * @param operation the operation type
+   * @param message the log message details
+   * @param impactedItems description of impacted items for debug filtering
+   * @return true if the trace event was interesting to debug control
+   */
+  public static boolean trace(
+      String method, String operation, String message, String impactedItems) {
     return trace(method, operation, message, impactedItems, null);
   }
 
   /**
    * Logs a granular TRACE message and triggers a debug check.
    *
-   * @param method        The method name where the log originates (e.g.
-   *                      "InsertFoundConnectionAlgo").
-   * @param operation     The operation type (e.g. "insertion", "removal").
-   * @param message       The details of the log message.
-   * @param impactedItems A string describing the impacted items, separated by comma
-   *                      (e.g. "Net #1,Trace #123").
-   *                      This string is used by DebugControl to filter execution.
+   * @param method The method name where the log originates (e.g. "InsertFoundConnectionAlgo").
+   * @param operation The operation type (e.g. "insertion", "removal").
+   * @param message The details of the log message.
+   * @param impactedItems A string describing the impacted items, separated by comma (e.g. "Net
+   *     #1,Trace #123"). This string is used by DebugControl to filter execution.
    * @param impactedPoints List of points that the operation focused on
    */
-  public static boolean trace(String method, String operation, String message, String impactedItems, Point[] impactedPoints) {
+  public static boolean trace(
+      String method,
+      String operation,
+      String message,
+      String impactedItems,
+      Point[] impactedPoints) {
     if (enabled) {
       if (logger == null) {
         logger = LogManager.getLogger(Freerouting.class);
       }
 
-      if (granularTraceEnabled && (impactedItems.isEmpty() || DebugControl.getInstance().isInterested(impactedItems))) {
-        String formattedMessage = String.format("[%s] [%s] %s: %s", method, operation, message, impactedItems);
+      if (granularTraceEnabled
+          && (impactedItems.isEmpty() || DebugControl.getInstance().isInterested(impactedItems))) {
+        String formattedMessage =
+            "[%s] [%s] %s: %s".formatted(method, operation, message, impactedItems);
         logger.trace(formattedMessage);
       }
     }
 
     boolean wasInterestingTraceEvent = DebugControl.getInstance().check(operation, impactedItems);
     if (wasInterestingTraceEvent) {
-      publishTraceEvent(new TraceEvent(method, operation, message, impactedItems, impactedPoints, Instant.now()));
+      publishTraceEvent(
+          new TraceEvent(method, operation, message, impactedItems, impactedPoints, Instant.now()));
     }
 
     return wasInterestingTraceEvent;
   }
 
-  /**
-   * Disables logging.
-   */
+  /** Disables logging. */
   public static void disableLogging() {
     enabled = false;
   }
