@@ -9,81 +9,105 @@ import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.io.Serializable;
 
+/** Mutable router configuration assembled from the configured settings sources. */
 public class RouterSettings implements Serializable, Cloneable {
   // Valid algorithm values
   public static final String ALGORITHM_CURRENT = "freerouting-router";
   public static final String ALGORITHM_V19 = "freerouting-router-v19";
   public static final double MIN_BEND_COST = 0.0;
   public static final double MAX_BEND_COST = 9.9;
+
   @SerializedName("enabled")
   public Boolean enabled;
+
   @SerializedName("algorithm")
   public String algorithm;
+
   /** Configuration for the SMD-pin fanout pre-pass. */
   @SerializedName("fanout")
   public FanoutSettings fanout;
+
   @SerializedName("copper_to_edge_clearance_um")
   public Double copperToEdgeClearanceUm;
+
   @SerializedName("hole_clearance_um")
   public Double holeClearanceUm;
+
   /**
-   * Opt-in width necking: when a connection fails at its net-class trace width, retry it
-   * once with all trace half-widths clamped to this width (in micrometers). Intended for
-   * fine-pitch regions where the class width physically cannot exit the pads; supply a
-   * legal manufacturable width (e.g. the project's densest net class). 0/absent = off.
+   * Opt-in width necking: when a connection fails at its net-class trace width, retry it once with
+   * all trace half-widths clamped to this width (in micrometers). Intended for fine-pitch regions
+   * where the class width physically cannot exit the pads; supply a legal manufacturable width
+   * (e.g. the project's densest net class). 0/absent = off.
    */
   @SerializedName("neck_width_um")
   public Double neckWidthUm;
+
   /**
-   * When true, a routed connection whose newly inserted traces/vias carry clearance
-   * violations is ripped up again and counted as not routed for that pass, instead of
-   * being kept with the violations (v1 limitation: violations between two pre-existing
-   * foreign items pushed by a shove are not attributed to the new connection).
+   * When true, a routed connection whose newly inserted traces/vias carry clearance violations is
+   * ripped up again and counted as not routed for that pass, instead of being kept with the
+   * violations (v1 limitation: violations between two pre-existing foreign items pushed by a shove
+   * are not attributed to the new connection).
    */
   @SerializedName("strict_drc")
   public Boolean strictDrc;
+
   @SerializedName("job_timeout")
   public String jobTimeoutString;
+
   @SerializedName("max_passes")
   public Integer maxPasses;
+
   @SerializedName("max_items")
   public transient Integer maxItems;
+
   @SerializedName("layers")
   public transient LayerSettings[] layers;
-  public transient Boolean save_intermediate_stages = false;
+
+  public transient Boolean saveIntermediateStages;
+
   @SerializedName("ignore_net_classes")
   public transient String[] ignoreNetClasses;
-  /**
-   * The accuracy of the pull tight algorithm.
-   */
-  @SerializedName("trace_pull_tight_accuracy")
-  public Integer trace_pull_tight_accuracy;
+
+  /** The accuracy of the pull tight algorithm. */
+  @SerializedName(
+      value = "trace_pull_tight_accuracy",
+      alternate = {"tracePullTightAccuracy"})
+  public Integer tracePullTightAccuracy;
+
   @SerializedName("allowed_via_types")
-  public Boolean vias_allowed;
+  public Boolean viasAllowed;
+
   /**
-   * If true, the trace width at static pins smaller the trace width will be
-   * lowered automatically to the pin with, if necessary.
+   * If true, the trace width at static pins smaller the trace width will be lowered automatically
+   * to the pin with, if necessary.
    */
-  @SerializedName("automatic_neckdown")
-  public Boolean automatic_neckdown;
+  @SerializedName(
+      value = "automatic_neckdown",
+      alternate = {"automaticNeckdown"})
+  public Boolean automaticNeckdown;
+
   @SerializedName("optimizer")
   public OptimizerSettings optimizer;
+
   @SerializedName("scoring")
   public ScoringSettings scoring;
+
   @SerializedName("max_threads")
   public Integer maxThreads;
+
   /**
    * When {@code true}, per-layer trace costs were initialized from board geometry (or set
-   * explicitly by the user) and must not be overwritten by subsequent calls to
-   * {@link #applyBoardSpecificOptimizations}.
+   * explicitly by the user) and must not be overwritten by subsequent calls to {@link
+   * #applyBoardSpecificOptimizations}.
    */
   private transient Boolean boardSpecificTraceCostsApplied;
+
   // PropertyChangeSupport for bidirectional binding with GUI
   private transient PropertyChangeSupport pcs = new PropertyChangeSupport(this);
 
   /**
-   * We need a parameterless constructor for the serialization.
-   * Initializes all fields with default values.
+   * We need a parameterless constructor for the serialization. Initializes all fields with default
+   * values.
    */
   public RouterSettings() {
     this.optimizer = new OptimizerSettings();
@@ -91,13 +115,11 @@ public class RouterSettings implements Serializable, Cloneable {
     this.fanout = new FanoutSettings();
   }
 
-  /**
-   * Creates a new instance of AutorouteSettings
-   */
-  public RouterSettings(RoutingBoard p_board) {
+  /** Creates router settings sized and tuned for the supplied board. */
+  public RouterSettings(RoutingBoard board) {
     this();
-    setLayerCount(p_board.get_layer_count());
-    applyBoardSpecificOptimizations(p_board);
+    setLayerCount(board.getLayerCount());
+    applyBoardSpecificOptimizations(board);
   }
 
   private static int defaultMaxThreads() {
@@ -118,7 +140,7 @@ public class RouterSettings implements Serializable, Cloneable {
     return Math.min(value, availableProcessors);
   }
 
-  // PropertyChangeListener support for bidirectional binding
+  /** Registers a listener for changes made through the settings API. */
   public void addPropertyChangeListener(PropertyChangeListener listener) {
     if (pcs == null) {
       pcs = new PropertyChangeSupport(this);
@@ -126,13 +148,14 @@ public class RouterSettings implements Serializable, Cloneable {
     pcs.addPropertyChangeListener(listener);
   }
 
+  /** Removes a previously registered property-change listener. */
   public void removePropertyChangeListener(PropertyChangeListener listener) {
     if (pcs != null) {
       pcs.removePropertyChangeListener(listener);
     }
   }
 
-  // Setter methods that fire property change events for bidirectional binding
+  /** Sets the maximum number of routing passes and notifies listeners. */
   public void setMaxPasses(Integer value) {
     Integer oldValue = this.maxPasses;
     this.maxPasses = value;
@@ -141,6 +164,7 @@ public class RouterSettings implements Serializable, Cloneable {
     }
   }
 
+  /** Sets and normalizes the maximum number of worker threads. */
   public void setMaxThreads(Integer value) {
     Integer oldValue = this.maxThreads;
     this.maxThreads = normalizeMaxThreads(value);
@@ -153,6 +177,7 @@ public class RouterSettings implements Serializable, Cloneable {
     }
   }
 
+  /** Sets the maximum duration allowed for a routing job. */
   public void setJobTimeoutString(String value) {
     String oldValue = this.jobTimeoutString;
     this.jobTimeoutString = value;
@@ -161,6 +186,7 @@ public class RouterSettings implements Serializable, Cloneable {
     }
   }
 
+  /** Enables or disables the autorouter. */
   public void setEnabled(Boolean value) {
     Boolean oldValue = this.enabled;
     this.enabled = value;
@@ -169,14 +195,21 @@ public class RouterSettings implements Serializable, Cloneable {
     }
   }
 
+  /** Sets whether the autorouter may place vias. */
   public void setViasAllowed(Boolean value) {
-    Boolean oldValue = this.vias_allowed;
-    this.vias_allowed = value;
+    Boolean oldValue = this.viasAllowed;
+    this.viasAllowed = value;
     if (pcs != null) {
-      pcs.firePropertyChange("vias_allowed", oldValue, value);
+      pcs.firePropertyChange("viasAllowed", oldValue, value);
     }
   }
 
+  /** Sets whether the autorouter may place vias using a primitive boolean. */
+  public void setViasAllowed(boolean value) {
+    viasAllowed = value;
+  }
+
+  /** Selects the routing algorithm implementation. */
   public void setAlgorithm(String value) {
     String oldValue = this.algorithm;
     this.algorithm = value;
@@ -185,6 +218,7 @@ public class RouterSettings implements Serializable, Cloneable {
     }
   }
 
+  /** Enables or disables the post-routing optimizer. */
   public void setOptimizerEnabled(Boolean value) {
     Boolean oldValue = this.optimizer != null ? this.optimizer.enabled : null;
     if (this.optimizer != null) {
@@ -196,43 +230,43 @@ public class RouterSettings implements Serializable, Cloneable {
   }
 
   /**
-   * Apply board-specific optimizations to RouterSettings based on board geometry
-   * and layer structure.
-   * This calculates layer costs based on board aspect ratio and adds penalties
-   * for outer layers.
-   * Should be called after loading a board to optimize routing performance.
+   * Applies board-specific optimizations only when the board dimensions or layer count changed.
    *
-   * @param p_board The routing board to optimize settings for
+   * @param board board whose geometry determines routing costs
    */
-  public void applyBoardSpecificOptimizationsIfNeeded(RoutingBoard p_board) {
-    if (p_board == null) {
+  public void applyBoardSpecificOptimizationsIfNeeded(RoutingBoard board) {
+    if (board == null) {
       return;
     }
-    int boardLayerCount = p_board.get_layer_count();
-    if (getLayerCount() != boardLayerCount || !Boolean.TRUE.equals(boardSpecificTraceCostsApplied)) {
-      applyBoardSpecificOptimizations(p_board);
+    int boardLayerCount = board.getLayerCount();
+    if (getLayerCount() != boardLayerCount
+        || !Boolean.TRUE.equals(boardSpecificTraceCostsApplied)) {
+      applyBoardSpecificOptimizations(board);
     }
   }
 
-  /**
-   * Returns whether board-specific trace costs have already been computed or explicitly set.
-   */
+  /** Returns whether board-specific trace costs have been initialized. */
   public boolean areBoardSpecificTraceCostsApplied() {
     return Boolean.TRUE.equals(boardSpecificTraceCostsApplied);
   }
 
-  public void applyBoardSpecificOptimizations(RoutingBoard p_board) {
-    double horizontal_width = p_board.bounding_box.width();
-    double vertical_width = p_board.bounding_box.height();
+  /**
+   * Calculates layer routing costs from board geometry and signal-layer structure.
+   *
+   * @param board board whose geometry determines routing costs
+   */
+  public void applyBoardSpecificOptimizations(RoutingBoard board) {
+    double horizontalWidth = board.boundingBox.width();
+    double verticalWidth = board.boundingBox.height();
 
-    int layer_count = p_board.get_layer_count();
+    int layerCount = board.getLayerCount();
 
     // Track original values to log changes later
-    Boolean[] originalRoutable = new Boolean[layer_count];
-    Double[] originalBendCost = new Double[layer_count];
-    Boolean[] originalPrefHoriz = new Boolean[layer_count];
+    Boolean[] originalRoutable = new Boolean[layerCount];
+    Double[] originalBendCost = new Double[layerCount];
+    Boolean[] originalPrefHoriz = new Boolean[layerCount];
     if (layers != null) {
-      for (int i = 0; i < Math.min(layers.length, layer_count); i++) {
+      for (int i = 0; i < Math.min(layers.length, layerCount); i++) {
         if (layers[i] != null) {
           originalRoutable[i] = layers[i].routable;
           originalBendCost[i] = layers[i].bendCost;
@@ -243,25 +277,29 @@ public class RouterSettings implements Serializable, Cloneable {
     if (scoring == null) {
       scoring = new ScoringSettings();
     }
-    double[] originalPrefCost = scoring.preferredDirectionTraceCost != null ? scoring.preferredDirectionTraceCost.clone() : null;
-    double[] originalUndesiredCost = scoring.undesiredDirectionTraceCost != null ? scoring.undesiredDirectionTraceCost.clone() : null;
+    final double[] originalPrefCost =
+        scoring.preferredDirectionTraceCost != null
+            ? scoring.preferredDirectionTraceCost.clone()
+            : null;
+    final double[] originalUndesiredCost =
+        scoring.undesiredDirectionTraceCost != null
+            ? scoring.undesiredDirectionTraceCost.clone()
+            : null;
 
     // additional costs against preferred direction with 1 digit behind the decimal
     // point.
-    double horizontal_add_costs_against_preferred_dir = 0.1 * Math.round(10 * horizontal_width / vertical_width);
+    final double horizontalAddCostsAgainstPreferredDir =
+        0.1 * Math.round(10 * horizontalWidth / verticalWidth);
 
-    double vertical_add_costs_against_preferred_dir = 0.1 * Math.round(10 * vertical_width / horizontal_width);
-
-    // make more horizontal preferred direction, if the board is horizontal.
-
-    boolean curr_preferred_direction_is_horizontal = horizontal_width < vertical_width;
+    final double verticalAddCostsAgainstPreferredDir =
+        0.1 * Math.round(10 * verticalWidth / horizontalWidth);
 
     // initialize the layer specific settings.
-    if (layers == null || layers.length != layer_count) {
+    if (layers == null || layers.length != layerCount) {
       boardSpecificTraceCostsApplied = false;
       LayerSettings[] oldLayers = layers;
-      layers = new LayerSettings[layer_count];
-      for (int i = 0; i < layer_count; i++) {
+      layers = new LayerSettings[layerCount];
+      for (int i = 0; i < layerCount; i++) {
         if (oldLayers != null && i < oldLayers.length && oldLayers[i] != null) {
           layers[i] = oldLayers[i];
         } else {
@@ -270,18 +308,20 @@ public class RouterSettings implements Serializable, Cloneable {
       }
     } else {
       // Ensure no elements inside the layers array are null
-      for (int i = 0; i < layer_count; i++) {
+      for (int i = 0; i < layerCount; i++) {
         if (layers[i] == null) {
           layers[i] = new LayerSettings();
         }
       }
     }
-    if (scoring.preferredDirectionTraceCost == null || scoring.preferredDirectionTraceCost.length != layer_count) {
-      scoring.preferredDirectionTraceCost = new double[layer_count];
+    if (scoring.preferredDirectionTraceCost == null
+        || scoring.preferredDirectionTraceCost.length != layerCount) {
+      scoring.preferredDirectionTraceCost = new double[layerCount];
       boardSpecificTraceCostsApplied = false;
     }
-    if (scoring.undesiredDirectionTraceCost == null || scoring.undesiredDirectionTraceCost.length != layer_count) {
-      scoring.undesiredDirectionTraceCost = new double[layer_count];
+    if (scoring.undesiredDirectionTraceCost == null
+        || scoring.undesiredDirectionTraceCost.length != layerCount) {
+      scoring.undesiredDirectionTraceCost = new double[layerCount];
       boardSpecificTraceCostsApplied = false;
     }
 
@@ -294,71 +334,86 @@ public class RouterSettings implements Serializable, Cloneable {
       scoring.defaultUndesiredDirectionTraceCost = 1.0;
     }
 
+    boolean currPreferredDirectionIsHorizontal = horizontalWidth < verticalWidth;
     boolean initializeTraceCosts = !Boolean.TRUE.equals(boardSpecificTraceCostsApplied);
 
-    for (int i = 0; i < layer_count; i++) {
-      if (!p_board.layer_structure.arr[i].is_signal) {
+    for (int i = 0; i < layerCount; i++) {
+      if (board.layerStructure.arr[i].isSignal) {
+        currPreferredDirectionIsHorizontal = !currPreferredDirectionIsHorizontal;
+      }
+      if (!board.layerStructure.arr[i].isSignal) {
         layers[i].routable = false;
       } else if (layers[i].routable == null) {
         layers[i].routable = true;
       }
       if (layers[i].bendCost == null) {
-        layers[i].bendCost = (scoring != null && scoring.defaultBendCost != null) ? scoring.defaultBendCost : 0.0;
-      }
-      if (p_board.layer_structure.arr[i].is_signal) {
-        curr_preferred_direction_is_horizontal = !curr_preferred_direction_is_horizontal;
+        layers[i].bendCost =
+            scoring != null && scoring.defaultBendCost != null ? scoring.defaultBendCost : 0.0;
       }
       if (layers[i].preferredDirectionHorizontal == null) {
-        layers[i].preferredDirectionHorizontal = curr_preferred_direction_is_horizontal;
+        layers[i].preferredDirectionHorizontal = currPreferredDirectionIsHorizontal;
       }
 
       if (initializeTraceCosts) {
         scoring.preferredDirectionTraceCost[i] = scoring.defaultPreferredDirectionTraceCost;
         scoring.undesiredDirectionTraceCost[i] = scoring.defaultUndesiredDirectionTraceCost;
-        if (curr_preferred_direction_is_horizontal) {
-          scoring.undesiredDirectionTraceCost[i] += horizontal_add_costs_against_preferred_dir;
+        if (currPreferredDirectionIsHorizontal) {
+          scoring.undesiredDirectionTraceCost[i] += horizontalAddCostsAgainstPreferredDir;
         } else {
-          scoring.undesiredDirectionTraceCost[i] += vertical_add_costs_against_preferred_dir;
+          scoring.undesiredDirectionTraceCost[i] += verticalAddCostsAgainstPreferredDir;
         }
       }
     }
     if (initializeTraceCosts) {
-      int signal_layer_count = p_board.layer_structure.signal_layer_count();
-      if (signal_layer_count > 2) {
-        double outer_add_costs = 0.2 * signal_layer_count;
+      int signalLayerCount = board.layerStructure.signalLayerCount();
+      if (signalLayerCount > 2) {
+        double outerAddCosts = 0.2 * signalLayerCount;
         // increase costs on the outer layers.
-        scoring.preferredDirectionTraceCost[0] += outer_add_costs;
-        scoring.preferredDirectionTraceCost[layer_count - 1] += outer_add_costs;
-        scoring.undesiredDirectionTraceCost[0] += outer_add_costs;
-        scoring.undesiredDirectionTraceCost[layer_count - 1] += outer_add_costs;
+        scoring.preferredDirectionTraceCost[0] += outerAddCosts;
+        scoring.preferredDirectionTraceCost[layerCount - 1] += outerAddCosts;
+        scoring.undesiredDirectionTraceCost[0] += outerAddCosts;
+        scoring.undesiredDirectionTraceCost[layerCount - 1] += outerAddCosts;
       }
       boardSpecificTraceCostsApplied = true;
     }
 
     // Log the changed parameters
-    StringBuilder summary = new StringBuilder("applyBoardSpecificOptimizations changed parameters:");
+    StringBuilder summary =
+        new StringBuilder("applyBoardSpecificOptimizations changed parameters:");
     boolean changed = false;
-    for (int i = 0; i < layer_count; i++) {
+    for (int i = 0; i < layerCount; i++) {
       StringBuilder layerChanges = new StringBuilder();
 
       if (!java.util.Objects.equals(originalRoutable[i], layers[i].routable)) {
-        layerChanges.append(String.format(" routable: %s -> %s;", originalRoutable[i], layers[i].routable));
+        layerChanges.append(
+            " routable: %s -> %s;".formatted(originalRoutable[i], layers[i].routable));
       }
       if (!java.util.Objects.equals(originalBendCost[i], layers[i].bendCost)) {
-        layerChanges.append(String.format(" bendCost: %s -> %s;", originalBendCost[i], layers[i].bendCost));
+        layerChanges.append(
+            " bendCost: %s -> %s;".formatted(originalBendCost[i], layers[i].bendCost));
       }
       if (!java.util.Objects.equals(originalPrefHoriz[i], layers[i].preferredDirectionHorizontal)) {
-        layerChanges.append(String.format(" preferredDirectionHorizontal: %s -> %s;", originalPrefHoriz[i], layers[i].preferredDirectionHorizontal));
+        layerChanges.append(
+            " preferredDirectionHorizontal: %s -> %s;"
+                .formatted(originalPrefHoriz[i], layers[i].preferredDirectionHorizontal));
       }
 
-      double oldPrefCost = (originalPrefCost != null && i < originalPrefCost.length) ? originalPrefCost[i] : 0.0;
+      double oldPrefCost =
+          originalPrefCost != null && i < originalPrefCost.length ? originalPrefCost[i] : 0.0;
       if (oldPrefCost != scoring.preferredDirectionTraceCost[i]) {
-        layerChanges.append(String.format(" preferredDirectionTraceCost: %s -> %s;", oldPrefCost, scoring.preferredDirectionTraceCost[i]));
+        layerChanges.append(
+            " preferredDirectionTraceCost: %s -> %s;"
+                .formatted(oldPrefCost, scoring.preferredDirectionTraceCost[i]));
       }
 
-      double oldUndesiredCost = (originalUndesiredCost != null && i < originalUndesiredCost.length) ? originalUndesiredCost[i] : 0.0;
+      double oldUndesiredCost =
+          originalUndesiredCost != null && i < originalUndesiredCost.length
+              ? originalUndesiredCost[i]
+              : 0.0;
       if (oldUndesiredCost != scoring.undesiredDirectionTraceCost[i]) {
-        layerChanges.append(String.format(" undesiredDirectionTraceCost: %s -> %s;", oldUndesiredCost, scoring.undesiredDirectionTraceCost[i]));
+        layerChanges.append(
+            " undesiredDirectionTraceCost: %s -> %s;"
+                .formatted(oldUndesiredCost, scoring.undesiredDirectionTraceCost[i]));
       }
 
       if (layerChanges.length() > 0) {
@@ -385,11 +440,9 @@ public class RouterSettings implements Serializable, Cloneable {
   }
 
   /**
-   * Set the layer count and initialize the layer specific settings.
-   * Also initialises the per-layer trace-cost arrays so that
-   * {@link #set_preferred_direction_trace_costs} and
-   * {@link #set_against_preferred_direction_trace_costs} can be called
-   * immediately without a prior call to {@link #applyBoardSpecificOptimizations}.
+   * Sets the number of board layers and initializes layer-specific cost arrays.
+   *
+   * @param layerCount number of layers in the board
    */
   public void setLayerCount(int layerCount) {
     if (layers == null || layers.length != layerCount) {
@@ -417,8 +470,8 @@ public class RouterSettings implements Serializable, Cloneable {
   }
 
   /**
-   * Creates a deep copy of this RouterSettings object.
-   * All fields including nested objects and arrays are cloned.
+   * Creates a deep copy of this RouterSettings object. All fields including nested objects and
+   * arrays are cloned.
    *
    * @return A new RouterSettings instance with the same values
    */
@@ -445,11 +498,11 @@ public class RouterSettings implements Serializable, Cloneable {
     result.holeClearanceUm = this.holeClearanceUm;
     result.neckWidthUm = this.neckWidthUm;
     result.strictDrc = this.strictDrc;
-    result.ignoreNetClasses = (this.ignoreNetClasses != null) ? this.ignoreNetClasses.clone() : null;
-    result.trace_pull_tight_accuracy = this.trace_pull_tight_accuracy;
+    result.ignoreNetClasses = this.ignoreNetClasses != null ? this.ignoreNetClasses.clone() : null;
+    result.tracePullTightAccuracy = this.tracePullTightAccuracy;
     result.enabled = this.enabled;
-    result.vias_allowed = this.vias_allowed;
-    result.automatic_neckdown = this.automatic_neckdown;
+    result.viasAllowed = this.viasAllowed;
+    result.automaticNeckdown = this.automaticNeckdown;
     result.maxThreads = this.maxThreads;
 
     // Use proper clone() methods for nested objects
@@ -461,56 +514,63 @@ public class RouterSettings implements Serializable, Cloneable {
     return result;
   }
 
-  /** Neck width in micrometers, or 0 when width necking is disabled. */
+  /** Returns the configured necking width in micrometres, or zero when disabled. */
   public double getNeckWidthUm() {
-    return (neckWidthUm != null && neckWidthUm > 0) ? neckWidthUm : 0;
+    return neckWidthUm != null && neckWidthUm > 0 ? neckWidthUm : 0;
   }
 
+  /** Returns whether connections with newly introduced clearance violations are rejected. */
   public boolean isStrictDrc() {
     return Boolean.TRUE.equals(strictDrc);
   }
 
-  public int get_start_ripup_costs() {
-    return (scoring != null && scoring.startRipupCosts != null) ? scoring.startRipupCosts : 1;
+  /** Returns the minimum ripup cost used by the router. */
+  public int getStartRipupCosts() {
+    return scoring != null && scoring.startRipupCosts != null ? scoring.startRipupCosts : 1;
   }
 
-  public void set_start_ripup_costs(int p_value) {
+  /** Sets the minimum ripup cost used by the router. */
+  public void setStartRipupCosts(int value) {
     if (scoring == null) {
       scoring = new ScoringSettings();
     }
-    scoring.startRipupCosts = Math.max(p_value, 1);
+    scoring.startRipupCosts = Math.max(value, 1);
   }
 
+  /** Returns whether the autorouter should run. */
   public boolean getRunRouter() {
     return enabled != null ? enabled : true;
   }
 
-  public void setRunRouter(boolean p_value) {
-    enabled = p_value;
+  /** Sets whether the autorouter should run. */
+  public void setRunRouter(boolean value) {
+    enabled = value;
   }
 
+  /** Returns whether the post-routing optimizer should run. */
   public boolean getRunOptimizer() {
     return optimizer != null && optimizer.enabled != null ? optimizer.enabled : false;
   }
 
-  public void setRunOptimizer(boolean p_value) {
+  /** Sets whether the post-routing optimizer should run. */
+  public void setRunOptimizer(boolean value) {
     if (optimizer == null) {
       optimizer = new OptimizerSettings();
     }
-    optimizer.enabled = p_value;
+    optimizer.enabled = value;
   }
 
+  /** Returns whether the fanout pre-pass should run. */
   public boolean getRunFanout() {
     return fanout != null && fanout.enabled != null ? fanout.enabled : true;
   }
 
-  /**
-   * Returns whether the fanout pre-pass should run.
-   */
+  /** Returns whether the fanout pre-pass should run. */
   public boolean isFanoutEnabled() {
     return fanout != null && Boolean.TRUE.equals(fanout.enabled);
   }
 
+  /** Enables or disables the fanout pre-pass. */
   public void setFanoutEnabled(Boolean value) {
     if (this.fanout == null) {
       this.fanout = new FanoutSettings();
@@ -522,224 +582,318 @@ public class RouterSettings implements Serializable, Cloneable {
     }
   }
 
-  public boolean get_vias_allowed() {
-    return vias_allowed != null ? vias_allowed : true;
+  /** Returns whether the autorouter may place vias. */
+  public boolean getViasAllowed() {
+    return viasAllowed != null ? viasAllowed : true;
   }
 
-  public void set_vias_allowed(boolean p_value) {
-    vias_allowed = p_value;
+  /** Returns the cost assigned to regular vias. */
+  public int getViaCosts() {
+    return scoring != null && scoring.viaCosts != null ? scoring.viaCosts : 1;
   }
 
-  public int get_via_costs() {
-    return (scoring != null && scoring.viaCosts != null) ? scoring.viaCosts : 1;
-  }
-
-  public void set_via_costs(int p_value) {
+  /** Sets the cost assigned to regular vias. */
+  public void setViaCosts(int value) {
     if (scoring == null) {
       scoring = new ScoringSettings();
     }
-    scoring.viaCosts = Math.max(p_value, 1);
+    scoring.viaCosts = Math.max(value, 1);
   }
 
-  public int get_plane_via_costs() {
-    return (scoring != null && scoring.planeViaCosts != null) ? scoring.planeViaCosts : 1;
+  /** Returns the cost assigned to vias connecting to a plane. */
+  public int getPlaneViaCosts() {
+    return scoring != null && scoring.planeViaCosts != null ? scoring.planeViaCosts : 1;
   }
 
-  public void set_plane_via_costs(int p_value) {
+  /** Sets the cost assigned to vias connecting to a plane. */
+  public void setPlaneViaCosts(int value) {
     if (scoring == null) {
       scoring = new ScoringSettings();
     }
-    scoring.planeViaCosts = Math.max(p_value, 1);
+    scoring.planeViaCosts = Math.max(value, 1);
   }
 
-  public void set_layer_active(int p_layer, boolean p_value) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.set_layer_active: p_layer=" + p_layer + " out of range [0.."
-          + (this.getLayerCount() - 1) + "]");
+  /**
+   * Enables or disables routing on one layer.
+   *
+   * @param layer layer index to update
+   * @param value whether routing is enabled on the layer
+   */
+  public void setLayerActive(int layer, boolean value) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.set_layer_active: p_layer="
+              + layer
+              + " out of range [0.."
+              + (this.getLayerCount() - 1)
+              + "]");
       return;
     }
-    if (layers[p_layer] == null) {
-      layers[p_layer] = new LayerSettings();
+    if (layers[layer] == null) {
+      layers[layer] = new LayerSettings();
     }
-    layers[p_layer].routable = p_value;
+    layers[layer].routable = value;
   }
 
-  public boolean get_layer_active(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.get_layer_active: p_layer=" + p_layer + " out of range [0.."
-          + (this.getLayerCount() - 1) + "]");
+  /**
+   * Returns whether routing is enabled on one layer.
+   *
+   * @param layer layer index to query
+   * @return whether routing is enabled on the layer
+   */
+  public boolean getLayerActive(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.get_layer_active: p_layer="
+              + layer
+              + " out of range [0.."
+              + (this.getLayerCount() - 1)
+              + "]");
       return false;
     }
-    if (layers[p_layer] == null) {
+    if (layers[layer] == null) {
       return true;
     }
-    return layers[p_layer].routable != null ? layers[p_layer].routable : true;
+    return layers[layer].routable != null ? layers[layer].routable : true;
   }
 
-  public void set_bend_cost(int p_layer, double p_value) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
+  /**
+   * Sets the bend cost for one layer.
+   *
+   * @param layer layer index to update
+   * @param value bend cost to store
+   */
+  public void setBendCost(int layer, double value) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
       FRLogger.warn("RouterSettings.set_bend_cost: p_layer out of range");
       return;
     }
-    if (layers[p_layer] == null) {
-      layers[p_layer] = new LayerSettings();
+    if (layers[layer] == null) {
+      layers[layer] = new LayerSettings();
     }
-    layers[p_layer].bendCost = Math.max(MIN_BEND_COST, Math.min(MAX_BEND_COST, p_value));
+    layers[layer].bendCost = Math.max(MIN_BEND_COST, Math.min(MAX_BEND_COST, value));
   }
 
-  public double get_bend_cost(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
+  /**
+   * Returns the effective bend cost for one layer.
+   *
+   * @param layer layer index to query
+   * @return effective bend cost
+   */
+  public double getBendCost(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
       FRLogger.warn("RouterSettings.get_bend_cost: p_layer out of range");
       return 0.0;
     }
-    if (layers[p_layer] == null || layers[p_layer].bendCost == null) {
-      return (scoring != null && scoring.defaultBendCost != null)
+    if (layers[layer] == null || layers[layer].bendCost == null) {
+      return scoring != null && scoring.defaultBendCost != null
           ? Math.max(MIN_BEND_COST, Math.min(MAX_BEND_COST, scoring.defaultBendCost))
           : 0.0;
     }
-    return layers[p_layer].bendCost;
+    return layers[layer].bendCost;
   }
 
-  public void set_preferred_direction_is_horizontal(int p_layer, boolean p_value) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.set_preferred_direction_is_horizontal: p_layer=" + p_layer + " out of range [0.."
-          + (this.getLayerCount() - 1) + "]");
+  /**
+   * Sets the preferred routing direction for one layer.
+   *
+   * @param layer layer index to update
+   * @param value whether the preferred direction is horizontal
+   */
+  public void setPreferredDirectionIsHorizontal(int layer, boolean value) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.set_preferred_direction_is_horizontal: p_layer="
+              + layer
+              + " out of range [0.."
+              + (this.getLayerCount() - 1)
+              + "]");
       return;
     }
-    if (layers[p_layer] == null) {
-      layers[p_layer] = new LayerSettings();
+    if (layers[layer] == null) {
+      layers[layer] = new LayerSettings();
     }
-    layers[p_layer].preferredDirectionHorizontal = p_value;
+    layers[layer].preferredDirectionHorizontal = value;
   }
 
-  public boolean get_preferred_direction_is_horizontal(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.get_preferred_direction_is_horizontal: p_layer=" + p_layer + " out of range [0.."
-          + (this.getLayerCount() - 1) + "]");
+  /**
+   * Returns the preferred routing direction for one layer.
+   *
+   * @param layer layer index to query
+   * @return whether the preferred direction is horizontal
+   */
+  public boolean getPreferredDirectionIsHorizontal(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.get_preferred_direction_is_horizontal: p_layer="
+              + layer
+              + " out of range [0.."
+              + (this.getLayerCount() - 1)
+              + "]");
       return false;
     }
-    if (layers[p_layer] == null) {
-      return (p_layer % 2 == 1);
+    if (layers[layer] == null) {
+      return layer % 2 == 1;
     }
-    return layers[p_layer].preferredDirectionHorizontal != null ? layers[p_layer].preferredDirectionHorizontal : (p_layer % 2 == 1);
+    return layers[layer].preferredDirectionHorizontal != null
+        ? layers[layer].preferredDirectionHorizontal
+        : (layer % 2 == 1);
   }
 
-  public void set_preferred_direction_trace_costs(int p_layer, double p_value) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
+  /**
+   * Sets the preferred-direction trace cost for one layer.
+   *
+   * @param layer layer index to update
+   * @param value trace cost to store
+   */
+  public void setPreferredDirectionTraceCosts(int layer, double value) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
       FRLogger.warn("AutorouteSettings.set_preferred_direction_trace_costs: p_layer out of range");
       return;
     }
     if (scoring == null) {
       scoring = new ScoringSettings();
     }
-    if (scoring.preferredDirectionTraceCost == null || scoring.preferredDirectionTraceCost.length != this.getLayerCount()) {
+    if (scoring.preferredDirectionTraceCost == null
+        || scoring.preferredDirectionTraceCost.length != this.getLayerCount()) {
       scoring.preferredDirectionTraceCost = new double[this.getLayerCount()];
     }
-    scoring.preferredDirectionTraceCost[p_layer] = Math.max(p_value, 0.1);
+    scoring.preferredDirectionTraceCost[layer] = Math.max(value, 0.1);
     boardSpecificTraceCostsApplied = true;
   }
 
-  public double get_preferred_direction_trace_costs(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
+  /**
+   * Returns the preferred-direction trace cost for one layer.
+   *
+   * @param layer layer index to query
+   * @return preferred-direction trace cost
+   */
+  public double getPreferredDirectionTraceCosts(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
       FRLogger.warn("AutorouteSettings.get_preferred_direction_trace_costs: p_layer out of range");
       return 0;
     }
-    if (scoring == null || scoring.preferredDirectionTraceCost == null || p_layer >= scoring.preferredDirectionTraceCost.length) {
+    if (scoring == null
+        || scoring.preferredDirectionTraceCost == null
+        || layer >= scoring.preferredDirectionTraceCost.length) {
       return 1.0;
     }
-    return scoring.preferredDirectionTraceCost[p_layer];
+    return scoring.preferredDirectionTraceCost[layer];
   }
 
-  public double get_against_preferred_direction_trace_costs(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.get_against_preferred_direction_trace_costs: p_layer out of range");
+  /**
+   * Returns the against-preferred-direction trace cost for one layer.
+   *
+   * @param layer layer index to query
+   * @return against-preferred-direction trace cost
+   */
+  public double getAgainstPreferredDirectionTraceCosts(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.get_against_preferred_direction_trace_costs: p_layer out of range");
       return 0;
     }
-    if (scoring == null || scoring.undesiredDirectionTraceCost == null || p_layer >= scoring.undesiredDirectionTraceCost.length) {
+    if (scoring == null
+        || scoring.undesiredDirectionTraceCost == null
+        || layer >= scoring.undesiredDirectionTraceCost.length) {
       return 1.0;
     }
-    return scoring.undesiredDirectionTraceCost[p_layer];
+    return scoring.undesiredDirectionTraceCost[layer];
   }
 
-  public double get_horizontal_trace_costs(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
+  /**
+   * Returns the trace cost for horizontal movement on one layer.
+   *
+   * @param layer layer index to query
+   * @return horizontal trace cost
+   */
+  public double getHorizontalTraceCosts(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
       FRLogger.warn("AutorouteSettings.get_preferred_direction_trace_costs: p_layer out of range");
       return 0;
     }
     double result;
-    if (get_preferred_direction_is_horizontal(p_layer)) {
-      result = scoring.preferredDirectionTraceCost[p_layer];
+    if (getPreferredDirectionIsHorizontal(layer)) {
+      result = scoring.preferredDirectionTraceCost[layer];
     } else {
-      result = scoring.undesiredDirectionTraceCost[p_layer];
+      result = scoring.undesiredDirectionTraceCost[layer];
     }
     return result;
   }
 
-  public void set_against_preferred_direction_trace_costs(int p_layer, double p_value) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.set_against_preferred_direction_trace_costs: p_layer out of range");
+  /**
+   * Sets the against-preferred-direction trace cost for one layer.
+   *
+   * @param layer layer index to update
+   * @param value trace cost to store
+   */
+  public void setAgainstPreferredDirectionTraceCosts(int layer, double value) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.set_against_preferred_direction_trace_costs: p_layer out of range");
       return;
     }
     if (scoring == null) {
       scoring = new ScoringSettings();
     }
-    if (scoring.undesiredDirectionTraceCost == null || scoring.undesiredDirectionTraceCost.length != this.getLayerCount()) {
+    if (scoring.undesiredDirectionTraceCost == null
+        || scoring.undesiredDirectionTraceCost.length != this.getLayerCount()) {
       scoring.undesiredDirectionTraceCost = new double[this.getLayerCount()];
     }
-    scoring.undesiredDirectionTraceCost[p_layer] = Math.max(p_value, 0.1);
+    scoring.undesiredDirectionTraceCost[layer] = Math.max(value, 0.1);
     boardSpecificTraceCostsApplied = true;
   }
 
-  public double get_vertical_trace_costs(int p_layer) {
-    if (p_layer < 0 || p_layer >= this.getLayerCount()) {
-      FRLogger.warn("AutorouteSettings.get_against_preferred_direction_trace_costs: p_layer out of range");
+  /**
+   * Returns the trace cost for vertical movement on one layer.
+   *
+   * @param layer layer index to query
+   * @return vertical trace cost
+   */
+  public double getVerticalTraceCosts(int layer) {
+    if (layer < 0 || layer >= this.getLayerCount()) {
+      FRLogger.warn(
+          "AutorouteSettings.get_against_preferred_direction_trace_costs: p_layer out of range");
       return 0;
     }
     double result;
-    if (get_preferred_direction_is_horizontal(p_layer)) {
-      result = scoring.undesiredDirectionTraceCost[p_layer];
+    if (getPreferredDirectionIsHorizontal(layer)) {
+      result = scoring.undesiredDirectionTraceCost[layer];
     } else {
-      result = scoring.preferredDirectionTraceCost[p_layer];
+      result = scoring.preferredDirectionTraceCost[layer];
     }
     return result;
   }
 
-  public AutorouteControl.ExpansionCostFactor[] get_trace_cost_arr() {
+  /** Returns per-layer horizontal and vertical trace-cost factors. */
+  public AutorouteControl.ExpansionCostFactor[] getTraceCostArr() {
     if (scoring == null || scoring.preferredDirectionTraceCost == null) {
       return new AutorouteControl.ExpansionCostFactor[0];
     }
-    AutorouteControl.ExpansionCostFactor[] result = new AutorouteControl.ExpansionCostFactor[scoring.preferredDirectionTraceCost.length];
+    AutorouteControl.ExpansionCostFactor[] result =
+        new AutorouteControl.ExpansionCostFactor[scoring.preferredDirectionTraceCost.length];
     for (int i = 0; i < result.length; i++) {
-      result[i] = new AutorouteControl.ExpansionCostFactor(get_horizontal_trace_costs(i), get_vertical_trace_costs(i));
+      result[i] =
+          new AutorouteControl.ExpansionCostFactor(
+              getHorizontalTraceCosts(i), getVerticalTraceCosts(i));
     }
     return result;
   }
 
-  /**
-   * If true, the trace width at static pins smaller the trace width will be
-   * lowered automatically to the pin with, if necessary.
-   */
-  public boolean get_automatic_neckdown() {
-    return this.automatic_neckdown != null && this.automatic_neckdown;
+  /** Returns whether automatic trace neckdown is enabled. */
+  public boolean getAutomaticNeckdown() {
+    return this.automaticNeckdown != null && this.automaticNeckdown;
+  }
+
+  /** Sets whether automatic trace neckdown is enabled. */
+  public void setAutomaticNeckdown(boolean value) {
+    this.automaticNeckdown = value;
   }
 
   /**
-   * If true, the trace width at static pins smaller the trace width will be
-   * lowered automatically to the pin with, if necessary.
-   */
-  public void set_automatic_neckdown(boolean p_value) {
-    this.automatic_neckdown = p_value;
-  }
-
-  /**
-   * Applies new values from the given settings to this settings object.
-   * Uses reflection to copy only non-null fields from the source settings.
-   * This is the core mechanism used by SettingsMerger to merge settings from
-   * multiple sources.
+   * Applies explicitly populated values from another settings object.
    *
-   * @param settings The settings to copy the values from (null values are
-   *                 skipped)
-   * @return The number of fields that were changed
+   * @param settings source settings whose non-null values should be copied
+   * @return number of fields changed
    */
   public int applyNewValuesFrom(RouterSettings settings) {
     if (settings == null) {
@@ -749,7 +903,6 @@ public class RouterSettings implements Serializable, Cloneable {
 
     int changedCount = ReflectionUtil.copyFields(settings, this);
 
-
     // Fire property change events for key properties to update GUI
     // Note: We fire events even if values didn't change to ensure GUI is in sync
     if (pcs != null) {
@@ -757,13 +910,16 @@ public class RouterSettings implements Serializable, Cloneable {
       pcs.firePropertyChange("maxThreads", null, this.maxThreads);
       pcs.firePropertyChange("jobTimeoutString", null, this.jobTimeoutString);
       pcs.firePropertyChange("enabled", null, this.enabled);
-      pcs.firePropertyChange("optimizer.enabled", null, this.optimizer != null ? this.optimizer.enabled : null);
-      pcs.firePropertyChange("fanout.enabled", null, this.fanout != null ? this.fanout.enabled : null);
+      pcs.firePropertyChange(
+          "optimizer.enabled", null, this.optimizer != null ? this.optimizer.enabled : null);
+      pcs.firePropertyChange(
+          "fanout.enabled", null, this.fanout != null ? this.fanout.enabled : null);
     }
 
     return changedCount;
   }
 
+  /** Validates and normalizes values that affect routing execution. */
   public void validate() {
     // Validate maxPasses (0 means no limit)
     if (this.maxPasses < 0 || this.maxPasses > 9999) {
@@ -775,23 +931,27 @@ public class RouterSettings implements Serializable, Cloneable {
       FRLogger.debug("maxPasses set to 0 (no limit), using Integer.MAX_VALUE");
     }
 
-// Validate maxThreads (0 means no limit - handled as max available during normalization)
-      int availableProcessors = Runtime.getRuntime().availableProcessors();
+    // Validate maxThreads (0 means no limit - handled as max available during normalization)
+    int availableProcessors = Runtime.getRuntime().availableProcessors();
     if (this.maxThreads == null) {
-    this.maxThreads = defaultMaxThreads();
+      this.maxThreads = defaultMaxThreads();
     } else if (this.maxThreads < 0) {
-    FRLogger.warn("Invalid maxThreads value: " + this.maxThreads + ", using " + defaultMaxThreads());
-    this.maxThreads = defaultMaxThreads();
+      FRLogger.warn(
+          "Invalid maxThreads value: " + this.maxThreads + ", using " + defaultMaxThreads());
+      this.maxThreads = defaultMaxThreads();
     } else if (this.maxThreads > availableProcessors) {
-    FRLogger.warn("Invalid maxThreads value: " + this.maxThreads + ", capping at " + availableProcessors);
-    this.maxThreads = availableProcessors;
+      FRLogger.warn(
+          "Invalid maxThreads value: " + this.maxThreads + ", capping at " + availableProcessors);
+      this.maxThreads = availableProcessors;
     }
 
-    // Validate trace_pull_tight_accuracy
-    if (this.trace_pull_tight_accuracy < 1) {
-      FRLogger.warn("Invalid trace_pull_tight_accuracy value: " + this.trace_pull_tight_accuracy
-          + ", using default 500");
-      this.trace_pull_tight_accuracy = 500;
+    // Validate tracePullTightAccuracy
+    if (this.tracePullTightAccuracy < 1) {
+      FRLogger.warn(
+          "Invalid tracePullTightAccuracy value: "
+              + this.tracePullTightAccuracy
+              + ", using default 500");
+      this.tracePullTightAccuracy = 500;
     }
   }
 }
